--- a/layouts/maestrotaquero/baseof.html
+++ b/layouts/maestrotaquero/baseof.html
@@ -1,14 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="{{ .Language.Lang }}">
+    <head>
+        {{ partial "head.html" . }}
+    </head>
 
-<head>
-    {{ partial "head.html" . }}
-</head>
-
-<body class="bg-zinc-100 dark:bg-stone-700">
-    {{ partial "nav.html" . }}
-    {{ block "main" . }}{{ end }}
-    {{ partial "footer" . }}
-</body>
-
+    <body class="bg-zinc-100 dark:bg-stone-700">
+        {{ partial "nav.html" . }} {{ block "main" . }}{{ end }} {{ partial
+        "footer" . }}
+    </body>
 </html>
