--- a/layouts/partials/posts-template.html
+++ b/layouts/partials/posts-template.html
@@ -3,10 +3,10 @@
         <div class="grid gap-4 mx-auto mt-12 mb-4 lg:max-w-none md:grid-cols-3">
             {{ range .Paginator.Pages }}
             <div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50 dark:bg-gray-900">
-                <a href="{{.Permalink}}">
+                <a href="{{.Permalink | absURL}}">
                     {{ with .Params.featured_image }}
                     {{ with resources.Get . }}
-                    {{ $postimage := (.Resize "500x webp q90").RelPermalink }}
+                    {{ $postimage := (.Resize "500x webp q90").RelPermalink | absURL}}
                     <img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height=""
                          loading="lazy" alt="{{ .Title }}" />
 
