--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -4,7 +4,8 @@
         <header class="mb-4 bg-stone-800">
             <span class="py-96">
                 <h1 class="py-16 text-5xl font-black text-center text-white capitalize">
-                    {{ .Title }}
+                    {{/*  {{ .Title }}  */}}
+                    Puestos
                 </h1>
             </span>
         </header>
