--- a/layouts/partials/posts-template.html
+++ b/layouts/partials/posts-template.html
@@ -4,7 +4,8 @@
             {{ range .Paginator.Pages }}
             <div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50 dark:bg-stone-900">
                 <a href="{{.Permalink | absURL}}">
-                    {{ with .Params.featured_image }}
+                    {{/*  {{ with .Params.featured_image }}  */}}
+                    {{ with .Site.Params.card_image}}
                     {{ with resources.Get . }}
                     {{ $postimage := (.Resize "500x webp q90").RelPermalink | absURL}}
                     <img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height=""
