--- a/layouts/index.html
+++ b/layouts/index.html
@@ -199,7 +199,8 @@
                         {{ range (.Paginator 6).Pages }}
                         <div class="flex flex-col overflow-hidden rounded-lg shadow-lg bg-gray-50 dark:bg-stone-600">
                             <a href="{{.Permalink}}">
-                                {{ with .Params.featured_image }}
+                                {{/*  {{ with .Params.featured_image }}  */}}
+                                {{with .Site.Params.card_image}}
                                 {{ with resources.Get . }}
                                 {{ $postimage := (.Resize "500x webp q90").RelPermalink }}
                                 <img src="{{ $postimage }}" class="object-fill overflow-hidden rounded-t-lg" width="100%" height="" loading="lazy" alt="{{ .Title }}" />
@@ -226,7 +227,7 @@
                                 <div class="flex items-center mt-6">
                                     <div class="flex-shrink-0">
                                         <span class="sr-only">{{ .Params.author }}</span>
-                                        {{ with .Params.authorimage }}
+                                        {{ with .Site.Params.authorimage }}
                                         {{ with resources.Get . }}
                                         {{ $authorimage := (.Resize "400x webp").RelPermalink }}
                                         <img class="w-10 h-10 rounded-full" src="{{ $authorimage }}" alt="">
